--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,12 +30,11 @@ jobs:
       - name: Setup GCloud
         uses: google-github-actions/auth@v1
         with:
-          credentials_json: project_cred
+          credentials_json: ${{ secrets.GCP_CREDENTIALS }}
           project_id: project_name
           export_environment_variables: true
         env:
           project_name: ${{ secrets.GCP_PROJ_NAME }}
-          project_cred: ${{ secrets.GCP_CREDENTIALS }}
       
       - name: Deploy Cloud Functions
         uses: google-github-actions/deploy-cloud-functions@v1
